Images and typos

--- a/tutorial/docs/quickstart/android-quickstart.mdx
+++ b/tutorial/docs/quickstart/android-quickstart.mdx
@@ -7,8 +7,8 @@ import StartingJellyfishDashboard from "./starting-dashboard.mdx";
 ## What you'll learn
 
 This tutorial will guide you through creating your first Android project which
-uses Jellyfish client. By the end of the tutorial you'll have a working
-application that connects to the frontend dashboard using WebRTC technology and
+uses Jellyfish client. By the end of the tutorial, you'll have a working
+application that connects to the front-end dashboard using WebRTC technology and
 streams and receives camera tracks.
 
 // TODO: finished app here
@@ -71,7 +71,7 @@ Don't add this line it in production apps! Using https is essential for users' s
 
 <StartingJellyfishBackend />
 
-### Start the dashboard web frontend
+### Start the dashboard web front-end
 
 <StartingJellyfishDashboard />
 
@@ -726,7 +726,7 @@ class MainViewModel(application: Application) : AndroidViewModel(application),
 
 ## Summary
 
-Congrats on finishing your first Jellyfish mobile application! In this tutorial
+Congrats on finishing your first Jellyfish mobile application! In this tutorial,
 you've learned how to make a basic Jellyfish client application that streams and
 receives video tracks with WebRTC technology.
 
