--- a/tutorial/docs/quickstart/ios-quickstart.mdx
+++ b/tutorial/docs/quickstart/ios-quickstart.mdx
@@ -7,11 +7,11 @@ import StartingJellyfishDashboard from "./starting-dashboard.mdx";
 ## What you'll learn
 
 This tutorial will guide you through creating your first iOS project which
-uses Jellyfish client. By the end of the tutorial you'll have a working
-application that connects to the frontend dashboard using WebRTC technology and
+uses Jellyfish client. By the end of the tutorial, you'll have a working
+application that connects to the front-end dashboard using WebRTC technology and
 streams and receives camera tracks.
 
-// TODO: finished app here
+![Finished app](./img/ios_full_app.gif)
 
 You can check out the finished project [here](https://github.com/graszka22/clients-docs).
 
@@ -39,12 +39,14 @@ Go to `File` -> `Add packages` and enter package github repo url (`https://githu
 
 <StartingJellyfishBackend />
 
-### Start the dashboard web frontend
+### Start the dashboard web front-end
+
+<StartingJellyfishDashboard />
 
 ### App permissions
 
 In `Info.plist` file you have to set `NSCameraUsageDescription`. You can edit
-this file in Xcode. This value is a description that is shown when iOS asks user
+this file in Xcode. This value is a description that is shown when iOS asks the user
 for camera permission.
 
 We also suggest setting background mode to `audio` so that the app doesn't
@@ -56,8 +58,6 @@ disconnect when it's in the background:
   <string>audio</string>
 </array>
 ```
-
-<StartingJellyfishDashboard />
 
 ## Connecting to the server and joining the room
 
@@ -288,6 +288,10 @@ struct ConnectScreen: View {
 }
 ```
 
+Now if you scan the code, the peer token should appear in the text field.
+
+![Scanning qr code](./img/scan_qr_ios.gif)
+
 ### Connecting to the backend
 
 Time to write code to connect to the backend. It will be responsibility of the
@@ -501,11 +505,16 @@ struct RoomScreen: View {
 }
 ```
 
+To test it you can add another participant and their new track (displaying for
+example rotating frog) in the dashboard like this (do it before joining the room):
+
+![Adding new participant](./img/adding_new_track.gif)
+
 ### Adding / removing peers and tracks
 
 If you run the app, you'll see that nothing happens if a new participant joins
-the room. We have to handle this by implementing some more methods from the
-`JellyfishClientListener` protocol:
+the room while we're joined. We have to handle this by implementing some more
+methods from the `JellyfishClientListener` protocol:
 
 ```swift title=ContentViewController.swift
 class ContentViewController: ObservableObject, JellyfishClientListener {
@@ -597,7 +606,7 @@ class ContentViewController: ObservableObject, JellyfishClientListener {
 
 ## Summary
 
-Congrats on finishing your first Jellyfish mobile application! In this tutorial
+Congrats on finishing your first Jellyfish mobile application! In this tutorial,
 you've learned how to make a basic Jellyfish client application that streams and
 receives video tracks with WebRTC technology.
 
